--- a/Infrastructure/IOC/IOC.csproj
+++ b/Infrastructure/IOC/IOC.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
     <PackageReference Include="Insight.Database" Version="6.2.8" />
   </ItemGroup>
 
